[gd_scene load_steps=2 format=3 uid="uid://ijh173600ogb"]

[ext_resource type="Script" path="res://main.gd" id="1_evugr"]

[node name="Main" type="Node"]
script = ExtResource("1_evugr")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Center" type="CenterContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Center"]
layout_mode = 2

[node name="NotchLbl" type="Label" parent="CanvasLayer/Center/VBoxContainer"]
layout_mode = 2
text = "Top Notch: 0"

[node name="BottomSafeInsetLbl" type="Label" parent="CanvasLayer/Center/VBoxContainer"]
layout_mode = 2
text = "Bottom Safe Inset: 0"

[node name="TopNotch" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
color = Color(1, 0, 0, 1)
